# OpenRCT2-SceneryGenerator

./: .gitignore  .yamllint.yaml  README.md  pyproject.toml
.github/workflows/: build-plugin.yml  lint.yml  pytest.yml
doc/: animated-small-scenery-basic-tutorial.md  blender-plugin-installation.md  blender-scene-setup.md  reference.md  scenery-generator-plugin-tutorial.md  small-scenery-advanced-tutorial.md  small-scenery-basic-tutorial.md
examples/blender/dumpster/: scene.gltf
examples/cli/footpath_banner/: banner.yaml
examples/cli/footpath_item/: bench.yaml  lamp.yaml
examples/cli/scenery_group/: group.yaml
examples/cli/scenery_large/: gate.yaml
examples/cli/scenery_small/: obelisk.yaml  spinner.yaml
examples/cli/scenery_wall/: double_wall.yaml  glass_wall.yaml  wall.yaml
examples/footpath_banner/: banner.yaml  materials.mtl
examples/footpath_item/: bench.yaml  lamp.yaml  materials.mtl
examples/scenery_group/: group.yaml
examples/scenery_large/: gate.yaml
examples/scenery_small/: obelisk.yaml  spinner.yaml
examples/scenery_wall/: double_wall.yaml  glass_wall.yaml  wall.yaml
openrct2_scenery_generator/: README.md  __init__.py  __main__.py  constants.py  exporter.py  loader.py  sprite_renderer.py  types.py
scenery_addon/: README.md  blender_manifest.toml  operators.py  props.py  scene_to_scenery.py
scenery_renderer_addon/: README.md  __init__.py  blender_manifest.toml  operators.py  panels.py  props.py  scene_to_scenery.py
scripts/: _buildlib.py  build_plugin_local.py  collect_wheels.py
scripts/ci/: set_version.py
tests/: test_exporter.py  test_main.py  test_scenery.py  test_scenery_loader.py  test_wall_geometry.py
